------------------
- Fixed cut/copy/paste for textobjs
- Fixed deleting regions in the textobject
- Fixed saving/loading gradients (esp. unbalanced)

Reggie, 20.8.1999:
------------------
- Improved speed of inserting new pages/slides
- Improved speed of pixmap handling

Reggie, 21.8.1999:
------------------
- Make backups before saving
- Fixed a bug in the pixmap handling
- reverted and fixed some stuff, which I broke yesterday
- Fixed some memleaks
- Added accelerators (CTRL+B, CTRL+I, CTRL+U) to switch
  bold, italic and underlined on and off in the textobj
  when editing it
- A bit more work on the presentation structure viewer/editor
- Another fix in the pixmap collection

Reggie, 22.8.1999:
------------------
- Some speed improvements
- Fixed some flicker
- When zooming for a screenpresentation zoom spacing-values of
  the textobject too
- A bit more work on the presentation structure viewer/editor
- Some fixes
- More presstructview

Reggie, 23.8.1999:
------------------
- fixes
- A bit more work on the presentation structure viewer/editor

Reggie, 26.8.1999:
------------------
- Cleanups
- Fixed calculating the needed size of a textobject
- Implemented "select All" in the textobject
- Implemented selecting a word in the textobject by
  doubleclicking on it
- lots of fixes in the textobject

Reggie, 27.8.1999:
------------------
- Improved DnD
- Removed lots of unused code in the KTextObject
- Fix in extending contents to height

Reggie, 29.8.1999:
------------------
- Set a better default font for textobj
- Fixes in textobj

Reggie, 30.8.1999:
------------------
- Fix in deleting regions in the textobj

Reggie, 4.9.1999:
-----------------
- Fixes in creating HTML slideshows
  (zooming works now)

Reggie, 12.9.1999:
------------------
- Some fixes for pixmaps and cliparts in new and old fileformat

Reggie, 13.9.1999:
------------------
- Saving/Loading pixmaps follows now the SPECS
- Saving/Loading cliparts follows now the new fileformat SPECS too