@@ -20,56 +20,52 @@
 /* Class: EffectCmd                                               */
 /******************************************************************/
 
-/*======================== constructor ===========================*/
-EffectCmd::EffectCmd( QString _name, int _presNum, Effect _effect, Effect2 _effect2,
-                      bool _disappear, Effect3 _effect3, int _disappearNum,
-                      int _oldPresNum, Effect _oldEffect, Effect2 _oldEffect2,
-                      bool _oldDisappear, Effect3 _oldEffect3, int _oldDisappearNum,
-                      KPObject *_object )
-    : Command( _name )
+/*================================================================*/
+EffectCmd::EffectCmd( QString _name, const QList<KPObject> &_objs,
+		      const QValueList<EffectStruct> &_oldEffects, EffectStruct _newEffect ) 
+    : Command( _name ), oldEffects( _oldEffects ),
+      newEffect( _newEffect ), objs( _objs )
 {
-    presNum = _presNum;
-    oldPresNum = _oldPresNum;
-    effect = _effect;
-    disappear = _disappear;
-    effect3 = _effect3;
-    disappearNum = _disappearNum;
-    oldEffect = _oldEffect;
-    effect2 = _effect2;
-    oldEffect2 = _oldEffect2;
-    oldDisappear = _oldDisappear;
-    oldEffect3 = _oldEffect3;
-    oldDisappearNum = _oldDisappearNum;
-    object = _object;
-
-    object->incCmdRef();
+    for ( unsigned int i = 0; i < objs.count(); ++i )
+        objs.at( i )->incCmdRef();
 }
 
-/*======================== destructor ============================*/
+/*================================================================*/
 EffectCmd::~EffectCmd()
 {
-    object->decCmdRef();
+    for ( unsigned int i = 0; i < objs.count(); ++i )
+        objs.at( i )->decCmdRef();
 }
 
-/*====================== execute =================================*/
+/*================================================================*/
 void EffectCmd::execute()
 {
-    object->setPresNum( presNum );
-    object->setEffect( effect );
-    object->setEffect2( effect2 );
-    object->setDisappear( disappear );
-    object->setEffect3( effect3 );
-    object->setDisappearNum( disappearNum );
+    KPObject *object = 0;
+    for ( unsigned int i = 0; i < objs.count(); ++i ) {
+	object = objs.at( i );
+	
+	object->setPresNum( newEffect.presNum );
+	object->setEffect( newEffect.effect );
+	object->setEffect2( newEffect.effect2 );
+	object->setDisappear( newEffect.disappear );
+	object->setEffect3( newEffect.effect3 );
+	object->setDisappearNum( newEffect.disappearNum );
+    }
 }
 
-/*====================== unexecute ===============================*/
+/*================================================================*/
 void EffectCmd::unexecute()
 {
-    object->setPresNum( oldPresNum );
-    object->setEffect( oldEffect );
-    object->setEffect2( oldEffect2 );
-    object->setDisappear( oldDisappear );
-    object->setEffect3( oldEffect3 );
-    object->setDisappearNum( oldDisappearNum );
+    KPObject *object = 0;
+    for ( unsigned int i = 0; i < objs.count(); ++i ) {
+	object = objs.at( i );
+	
+	object->setPresNum( oldEffects[ i ].presNum );
+	object->setEffect( oldEffects[ i ].effect );
+	object->setEffect2( oldEffects[ i ].effect2 );
+	object->setDisappear( oldEffects[ i ].disappear );
+	object->setEffect3( oldEffects[ i ].effect3 );
+	object->setDisappearNum( oldEffects[ i ].disappearNum );
+    }
 }
 
