@@ -450,3 +450,9 @@ Reggie, 13.9.1999:
 ------------------
 - Saving/Loading pixmaps follows now the SPECS
 - Saving/Loading cliparts follows now the new fileformat SPECS too
+
+Reggie, 16.9.1999:
+------------------
+- It's possible now to assign an effect for screenpresentations
+  to multiple objects at the same time if multiple objs are selected
+
